[tool.poetry]
name = "sssi"
version = "0.1.0"
description = ""
authors = ["AryanNesti <aryannesti60@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
opencv-python = "^4.6.0.66"
matplotlib = "^3.6.2"
patchify = "^0.2.3"
segmentation-models = "^1.0.1"
scipy = "^1.9.3"
tensorflow = "2.10.0"
sklearn = "^0.0.post1"
scikit-learn = "^1.1.3"
nni = "^2.10"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
